# fastapi_2025

./: pyproject.toml
Model/: User.cs
fast_zero2025/: app.py  pyproject.toml  schemas.py
fast_zero2025/fast_zero2025/: app.py
fast_zero2025/tests/: conftest.py  test_app.py
