[project]
name = "fast-zero2025"
version = "3.13"
description = ""
authors = [
    {name = "Ana Paula Gomes Miranda",email = "paulagomes@unitins.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
