[project]
name = "fast-zero2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Paula Gomes Miranda",email = "paulagomes@unitins.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
