[tool.poetry]
name = "fast_zero2025"
version = "0.1.0"
description = "Projeto FastAPI com testes"
authors = ["Ana Paula Gomes Miranda <paulagomes@unitins.br>"]
readme = "README.md"
packages = [{include = "fast_zero2025"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.27.0"
pytest = "^7.4.0"
httpx = "^0.26.0"
sqlalchemy = "^2.0.25"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"